# BinaryByte

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
binarybyte/: __init__.py
binarybyte/cli/: deploy_cmd.py  eval_cmd.py  init_cmd.py  interactive_cmd.py  main.py  state_cmd.py
binarybyte/core/: config.py  constants.py
binarybyte/deploy/: gate.py  history.py  manifest.py
binarybyte/deploy/targets/: base.py  claude_code.py  copilot.py  cursor.py  gemini_cli.py  windsurf.py
binarybyte/eval/: results.py  runner.py  schema.py
binarybyte/eval/checks/: imports.py  loader.py  safety.py  secrets.py
binarybyte/eval/sandbox/: runner.py
binarybyte/state/: schema.py  snapshots.py  store.py
docs/: ADAPTERS.md  PUBLISHING.md  RELEASE_NOTES.md
examples/: plugin_example.py  sample-config.yaml  sample-eval-suite.yaml  sample-state.yaml
test-playground/: GEMINI.md  bad.patch  good.patch
test-playground/.binarybyte/: config.yaml  state.yaml
test-playground/.binarybyte/results/v1/: verdict.json
test-playground/.binarybyte/results/v2/: verdict.json
test-playground/.cursor/rules/: binarybyte.mdc
tests/: test_config.py  test_deploy.py  test_deploy_history.py  test_eval.py  test_eval_plugins.py  test_last_passed.py  test_new_adapters.py  test_sandbox.py  test_secrets.py  test_snapshots.py  test_state.py  test_state_rollback.py
